Добафлен новый редактор файлов, исправления в таймерах, файловая система стала легче на 10кб. +- другие мелкие фиксы.

--- a/dev_data/block-temperature.htm
+++ b/dev_data/block-temperature.htm
@@ -3,6 +3,9 @@
   <h5 class="alert-default">{{SSDP}}</h5>
   <h2>{{LangTemperature}}</h2>
   <div id="{{sensorId}}" style="height:200px;margin-left:-20px"></div>
-  <a class="btn btn-block btn-default" href="http://{{ip}}/page.htm?chart&sensor">{{LangOptions1}}</a>
+  <div class="btn-group btn-block">
+   <a href="http://{{ip}}/page.htm?chart&sensor" class="btn btn-default" style="width:80%"><i class="set-img"></i>{{LangOptions1}}</a>
+   <a href="http://{{ip}}/page.htm?setup" class="btn btn-default" style="width:20%"><i class="opt-img"></i></a>
+  </div>
  </div>
 </div>
