Очень большое обновление, много нового!

--- a/dev_data/block-jalousie.htm
+++ b/dev_data/block-jalousie.htm
@@ -1,6 +1,6 @@
 <div class="col-md-6">
 <div class="block">
- <h5 class="alert-success">{{SSDP}}</h5>
+ <h5 class="alert-success"><a href="http://{{ip}}">{{SSDP}}</a></h5>
  <div class="alert alert-dismissible alert-warning {{g258426-{{ip}}}}">
   <button class="close" onclick="hide('g258426-{{ip}}',this);" type="button">×</button>
   {{LangTime4}} <b>{{timeUp}}</b>
