--- a/dev_data/block-temperature.htm
+++ b/dev_data/block-temperature.htm
@@ -1,6 +1,6 @@
 <div class="col-md-6">
  <div class="block">
-  <h5 class="alert-default">{{SSDP}}</h5>
+  <h5 class="alert-default"><a href="http://{{ip}}">{{SSDP}}</a></h5>
   <h2>{{LangTemperature}}</h2>
   <div id="{{sensorId}}" style="height:200px;margin-left:-20px"></div>
   <div class="btn-group btn-block">
