--- a/dev_data/block-relay.htm
+++ b/dev_data/block-relay.htm
@@ -1,6 +1,6 @@
 <div class="col-md-6">
  <div class="block">
-  <h5 class="alert-danger">{{SSDP}}</h5>
+  <h5 class="alert-danger"><a href="http://{{ip}}">{{SSDP}}</a></h5>
   <div class="alert alert-dismissible alert-warning {{g69142-{{ip}}}}">
    <button class="close" onclick="hide('g69142-{{ip}}',this);" type="button">×</button>
    <a href="http://{{ip}}/timer.htm" target="_blank" class="close"><i class="popup-img"></i></a>
@@ -8,6 +8,10 @@
   </div>
   <hr>
   <input type="button" onclick="ajax('{{ip}}','relay',this);" value="{{state}}" class="btn btn-block btn-lg btn-primary">
+  <input type="button" onclick="ajax('{{ip}}','relay1',this);" value="{{state}}" class="btn btn-block btn-lg btn-primary {{relay1}}">
+  <input type="button" onclick="ajax('{{ip}}','relay2',this);" value="{{state}}" class="btn btn-block btn-lg btn-primary {{relay2}}">
+  <input type="button" onclick="ajax('{{ip}}','relay3',this);" value="{{state}}" class="btn btn-block btn-lg btn-primary {{relay3}}">
+  <input type="button" onclick="ajax('{{ip}}','relay4',this);" value="{{state}}" class="btn btn-block btn-lg btn-primary {{relay4}}">
   <hr>
   <div class="btn-group btn-block">
    <a href="http://{{ip}}/page.htm?relay" class="btn btn-default" style="width:80%"><i class="set-img"></i>{{LangOptions1}}</a>
