--- a/dev_data/block-rgb.htm
+++ b/dev_data/block-rgb.htm
@@ -1,6 +1,6 @@
 <div class="col-md-6">
  <div class="block">
-  <h5 class="alert-info">{{SSDP}}</h5>
+  <h5 class="alert-info"><a href="http://{{ip}}">{{SSDP}}</a></h5>
   <div class="alert alert-dismissible alert-warning {{g279149-{{ip}}}}">
    <button class="close" onclick="hide('g279149-{{ip}}',this);" type="button">×</button>
    <a href="http://{{ip}}/timer.htm" target="_blank" class="close"><i class="popup-img"></i></a>
