--- a/dev_data/index3.htm
+++ b/dev_data/index3.htm
@@ -2,13 +2,14 @@
 <html>
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" type="text/css" href="css/build.css?v12.06.2017">
+  <link rel="stylesheet" type="text/css" href="css/build.css?v15.07.2017">
   <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/style.css"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Device Page</title>
   <script type="text/javascript">
    var xhttp=createXmlHttpObject();
+   var jsonResponse;
    function createXmlHttpObject(){
     if(window.XMLHttpRequest){
      xhttp=new XMLHttpRequest();
@@ -20,14 +21,12 @@
 
    window.onload = function() {
     deviceList('first');
+    if (readCookie("issues-hidden") != "hidden") {loadIssues();
+                                                 } else {document.getElementById('issues').parentNode.classList.add('hidden');}
+    if (readCookie("commits-hidden") != "hidden") {loadCommits();
+                                                  } else {document.getElementById('commits').parentNode.classList.add('hidden');}
    }
 
-
-   function findDevice(submit) {
-    document.getElementById('content').innerHTML='<div class="alert alert-dismissible alert-info"><div class="loader"><\/div><strong><center>Пожалуйста подождите, идет сканирование сети.<\/center><\/strong><\/div>';
-    ajax(window.location.hostname,'devices.scan.json',submit, '1');
-    deviceList('search');
-   }
 
    function deviceList(stage,sorting) {
     document.getElementById('content').innerHTML='';
@@ -35,32 +34,46 @@
     //document.getElementById("content").innerHTML = '<div class="col-md-12"><div class="block"><h5 class="alert-info">{{LangDevices}}<\/h5><table id="table-content" class="table table-striped table-hover" style="width:100%;text-align:left;"><\/table><\/div><\/div>';
     //document.getElementById("content").innerHTML += '<div class="col-md-6"><div class="block"><h5 class="alert-default">Sensors<\/h5><table id="table-sensors" class="table table-striped table-hover" style="width:100%;text-align:left;"><\/table><\/div><\/div>';
     //document.getElementById("content").innerHTML += '<div class="col-md-6"><div class="block"><h5 class="alert-warning">{{LangTimer}}<\/h5><table id="table-timers" class="table table-striped table-hover" style="width:100%;text-align:left;"><\/table><\/div><\/div>';
-   document.getElementById("content-history").innerHTML += '<div class="col-md-6"><div class="block"><h5 class="alert-default">{{LangHistory}}<\/h5><ul id="history"><\/ul><\/div><\/div>';
+    //document.getElementById("content-history").innerHTML += '<div class="col-md-6"><div class="block"><h5 class="alert-default">{{LangHistory}}<\/h5><ul id="history"><\/ul><\/div><\/div>';
 
     var xhttp=createXmlHttpObject();
-    xhttp.open("GET", "/devices.list.json?"+Math.floor(Math.random()*10000), true);
+    xhttp.open("GET", "/ip.list.json?"+Math.floor(Math.random()*10000), true);
+    xhttp.send(null);
+    xhttp.onload = function(e) {
+     var ipDevice=JSON.parse(xhttp.responseText);
+     for(i = 0;i<ipDevice.ssdpList.length;i++) {
+      loadModule(ipDevice.ssdpList[i].ip,stage,sorting);
+     }
+     if (ipDevice.ssdpList.length == 0) {
+      location.href = "/page.htm?first-connect";
+     }
+    }
+   }
+
+   function loadModule(ipval,stage,sorting) {
+
+    var xhttp=createXmlHttpObject();
+    xhttp.open("GET", "http://"+ipval+"/modules.json", true)
     xhttp.send(null);
     xhttp.onload = function(e) {
      var ipModule=JSON.parse(xhttp.responseText);
      var allModules = [];
      var allSpace = [];
-     for(var key in ipModule) {
-      var ipval = ipModule[key].ip;
-      if (ipval == '0.0.0.0') {location.href = "/page.htm?first-connect";}
-      if (stage == 'search') {
-       loadBlock(ipval,ipModule[key].space,'first',ipModule[key].module);
-      }
-      // Сортировка
-      if (stage == 'first' && sorting == null || searchModule(ipModule[key].module,sorting) == 'yes' || ipModule[key].space == sorting) {
-
-       loadBlock(ipval,ipModule[key].space,'first',ipModule[key].module);
-      }
-      for (var s in ipModule[key].module) {
-       // if (ipModule[key].module[s] != 'ntp' && ipModule[key].module[s] != 'ddns' && ipModule[key].module[s] != 'timers' && ipModule[key].module[s] != 'mqtt')
-       allModules.push(ipModule[key].module[s]);
-      }
-      allSpace.push(ipModule[key].space);
+     //   for(var key in ipModule) {
+     if (stage == 'search') {
+      loadBlock(ipval,ipModule.space,'first',ipModule.module);
      }
+     // Сортировка
+     if (stage == 'first' && sorting == null || searchModule(ipModule.module,sorting) == 'yes' || ipModule.space == sorting) {
+
+      loadBlock(ipval,ipModule.space,'first',ipModule.module);
+     }
+     for (var s in ipModule.module) {
+      // if (ipModule.module[s] != 'ntp' && ipModule.module[s] != 'ddns' && ipModule.module[s] != 'timers' && ipModule.module[s] != 'mqtt')
+      allModules.push(ipModule.module[s]);
+     }
+     allSpace.push(ipModule.space);
+     //  }
      //   if (stage == 'first' || stage == 'search') {
      //    var spaceArray = [];
      //    var space_lookup  = {};
@@ -110,7 +123,7 @@
       xhttp.send(null);
       xhttp.onload = function(e) {
        var jsonResponse2=JSON.parse(xhttp.responseText);
-       var jsonResponse = Object.assign(jsonResponse1, jsonResponse2);
+       jsonResponse = Object.assign(jsonResponse1, jsonResponse2);
        var theCookies = document.cookie.split(';');
        for (var i = 1 ; i <= theCookies.length; i++) {
         jsonResponse[theCookies[i-1].split("=")[0].replace(/^ /,'')] = theCookies[i-1].split("=")[1];
@@ -121,6 +134,11 @@
 
        if (searchModule(modules,"relay") == 'yes'){
         if (stage == 'first'){loadElement(jsonResponse.ip,jsonResponse.SSDP,jsonResponse.space,'relay','danger',content);}
+        for (var i = 1; i < 5; i++) {
+         if (searchModule(modules,"relay"+i) != 'yes'){
+          document.getElementById("button-"+ipval+"-relay").innerHTML += '<input onclick="ajax(\''+jsonResponse.ip+'\',\'relay'+i+'\',this);" value="'+(jsonResponse.state=='0'?jsonResponse.LangOn:jsonResponse.LangOff)+'" class="btn btn-'+(jsonResponse.state=='0'?'primary':'info')+'" type="button">';
+         }
+        }
         document.getElementById("button-"+ipval+"-relay").innerHTML='<input onclick="ajax(\''+jsonResponse.ip+'\',\'relay\',this);" value="'+(jsonResponse.state=='0'?jsonResponse.LangOn:jsonResponse.LangOff)+'" class="btn btn-'+(jsonResponse.state=='0'?'primary':'info')+'" type="button">';
        }
 
@@ -151,7 +169,7 @@
 
 
 
-       if (window.location.hostname == ipval) {
+       if (window.location.hostname == ipval && stage == 'first') {
         var new_string2;
         var bodyData = document.getElementsByTagName('body')[0].innerHTML;
         for (var key in jsonResponse) {
@@ -159,7 +177,9 @@
          bodyData = new_string2;
         }
         document.getElementsByTagName('body')[0].innerHTML = new_string2;
-        loadBuild(jsonResponse.spiffsData, jsonResponse.LangUpgrade);
+        if (searchModule(modules,"upgrade") == 'yes'){
+         loadBuild(jsonResponse.spiffsData, jsonResponse.LangUpgrade);
+        }
        }
 
 
@@ -250,7 +270,13 @@
     xhttp.onload = function(e) {
      submit.value=old_submit;
      submit_disabled(false);
-     if (!loadB) {loadBlock(ipHost,'block-'+ipHost, '');}
+     //if (!loadB) {loadBlock(ipHost,'block-'+ipHost, '');}
+     var response=JSON.parse(xhttp.responseText);
+     if (response.class && response.class!='undefined') {submit.className = response.class.replace(/btn-block btn-lg/,'');}
+     if (response.style && response.style!='undefined') {submit.style = response.style;}
+     if (response.title && response.title!='undefined') {
+      if (submit.tagName == 'INPUT') {submit.value = jsonResponse[response.title.slice(2, -2)];}
+     }
     }
    }
 
@@ -305,19 +331,73 @@
 
    function loadBuild(spiffs, LangUpgrade){
     var xmlHttp=createXmlHttpObject();
-    xmlHttp.open('GET','https://api.github.com/repos/renat2985/rgb/contents/build',true);
+    xmlHttp.open('GET','https://api.github.com/repos/tretyakovsa/Sonoff_WiFi_switch/contents/build',true);
     xmlHttp.send(null);
     xmlHttp.onload = function(e) {
      var jsonBuild=JSON.parse(xmlHttp.responseText);
      jsonBuild.sort(function(a,b){return (a.name< b.name) ? 1 : ((b.name < a.name) ? -1 : 0);});
      if (jsonBuild[0].name != spiffs) {
-      document.getElementById('update').innerHTML = '<a href="/upgrade?spiffs=http://backup.privet.lv/esp/rgb/'+jsonBuild[0].name+'&build=http://backup.privet.lv/esp/rgb/build.0x00000'+jsonBuild[0].name.substring(14)+'" onclick="return confirm(\''+LangUpgrade+'\')"><i class="warning-img"><\/i><\/a>';
+      document.getElementById('update').innerHTML = '<a href="/upgrade?spiffs=http://backup.privet.lv/esp/sonoff/'+jsonBuild[0].name+'&build=http://backup.privet.lv/esp/sonoff/build.0x00000'+jsonBuild[0].name.substring(14)+'" onclick="return confirm(\''+LangUpgrade+'\')"><i class="warning-img"><\/i><\/a>';
      }
     }
+   }
+
+   function loadIssues(){
+    var xmlHttp=createXmlHttpObject();
+    xmlHttp.open('GET','https://api.github.com/repos/tretyakovsa/Sonoff_WiFi_switch/issues',true);
+    xmlHttp.send(null);
+    xmlHttp.onload = function(e) {
+     document.getElementById('issues').innerHTML = '';
+     var jsonIssues=JSON.parse(xmlHttp.responseText);
+     jsonIssues.sort(function(a,b){return (a.updated_at< b.updated_at) ? 1 : ((b.updated_at < a.updated_at) ? -1 : 0);});
+     for(var key in jsonIssues) {
+      if (jsonIssues[key].user.login == 'renat2985' || jsonIssues[key].user.login == 'tretyakovsa') {
+       for(var label in jsonIssues[key].labels) {
+        if (jsonIssues[key].labels[label] == 'news') {
+         if (readCookie("news-"+jsonIssues[key].id) != "hidden") {
+          document.getElementById('news').innerHTML = '<div class="alert alert-dismissible alert-info"><button class="close" onclick="hide(\'news-'+jsonIssues[key].id+'\',this);" type="button">×<\/button>'+jsonIssues[key].title.substr(0, 100)+' <a href="'+jsonIssues[key].html_url+'" target="_blank">подробнее...<\/a><\/div>';
+         }
+        }
+       }
+      }
+      if (key < 5) {
+       document.getElementById('issues').innerHTML += '<p><span class="label label-default">&#8987; '+jsonIssues[key].updated_at.substring(0,10)+'<\/span> <a href="'+jsonIssues[key].html_url+'" target="_blank">'+jsonIssues[key].title+'<\/a> <i>('+jsonIssues[key].comments+')<\/i><\/p>';
+      }
+     }
+    }
+   }
+
+
+   function loadCommits(){
+    var xmlHttp=createXmlHttpObject();
+    xmlHttp.open('GET','https://api.github.com/repos/tretyakovsa/Sonoff_WiFi_switch/commits',true);
+    xmlHttp.send(null);
+    xmlHttp.onload = function(e) {
+     document.getElementById('commits').innerHTML = '';
+     var jsonCommits=JSON.parse(xmlHttp.responseText);
+     //  jsonCommits.sort(function(a,b){return (a.updated_at< b.updated_at) ? 1 : ((b.updated_at < a.updated_at) ? -1 : 0);});
+     for(var key in jsonCommits) {
+      if (key < 5) {
+       document.getElementById('commits').innerHTML += '<p><span class="label label-default">&#8987; '+jsonCommits[key].commit.author.date.substring(0,10)+'<\/span> <a href="'+jsonCommits[key].html_url+'" target="_blank">'+jsonCommits[key].commit.message+'<\/a><\/p>';
+      }
+     }
+    }
+   }
+
+   function readCookie(name) {
+    var nameEQ = name + "=";
+    var ca = document.cookie.split(';');
+    for (var i = 0; i < ca.length; i++) {
+     var c = ca[i];
+     while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+     if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+    }
+    return null;
    }
   </script>
  </head>
  <body>
+  <div id="news"></div>
   <div class="container device index3">
    <div class="header">
     <div class="btn-group pull-right" style="margin-top:35px;">
@@ -326,16 +406,34 @@
      <ul class="dropdown-menu hidden" id="help"><li><a href="https://github.com/tretyakovsa/Sonoff_WiFi_switch/issues" target="_blank"><b>Sonoff</b> (Relay)</a></li><li><a href="https://github.com/renat2985/rgb/issues" target="_blank"><b>RGB</b> (WS2811-12/NeoPixel)</a></li><li><a href="https://github.com/tretyakovsa/jaluzi/issues" target="_blank"><b>Jalousie</b> (Motor/Servo)</a></li></ul>
     </div>
     <div class="pull-right" style="margin-top:35px;margin-right:5px">
-     <input class="btn btn-info" value="{{LangSearch3}}" onclick="findDevice(this);window.scrollTo(0,0);" type="button">
      <div class="btn-group">
       <a href="#" class="btn btn-warning dropdown-toggle" onclick="toggle('skins');">{{LangDesign}} <span class="caret"></span></a>
-      <ul class="dropdown-menu hidden" id="skins"><li><a href="/index.htm"><b>Default</b></a></li><li><a href="/index2.htm"><b>Inline</b></a></li><li><a href="/index3.htm"><b>Block</b></a></li></ul>
+      <ul class="dropdown-menu hidden" id="skins"><li><a href="/skins?set=index.htm"><b>Default</b></a></li><li><a href="/skins?set=index2.htm"><b>Inline</b></a></li><li><a href="/skins?set=index3.htm"><b>Block</b></a></li><li><a href="/skins?set=index4.htm"><b>Life</b></a></li></ul>
      </div>
     </div>
     <h1>{{space}}<br><small class="show">{{SSDP}}<sup id="update"></sup></small></h1>
    </div>
-   <div class="col-md-12" id="content"></div>
-   <div id="content-history"></div>
+   <div class="col-md-12" id="content">{{LangLoading}}</div>
+   <div class="col-md-6">
+    <div class="block">
+     <button class="close" onclick="hide('issues-hidden',this);" type="button">×</button>
+     <h5 class="alert-default">Issues</h5>
+     <div id="issues">{{LangLoading}}</div>
+    </div>
+   </div>
+   <div class="col-md-6">
+    <div class="block">
+     <button class="close" onclick="hide('commits-hidden',this);" type="button">×</button>
+     <h5 class="alert-default">Commits</h5>
+     <div id="commits">{{LangLoading}}</div>
+    </div>
+   </div>
+   <div class="col-md-6">
+    <div class="block">
+     <h5 class="alert-default">{{LangHistory}}</h5>
+     <ul id="history"></ul>
+    </div>
+   </div>
   </div>
  </body>
 </html>
