--- a/dev_data/index4.htm
+++ b/dev_data/index4.htm
@@ -28,6 +28,14 @@
     } else {
      deviceList('first');
     }
+    loadIssues();
+    loadCommits();
+   }
+
+   function findDevice(submit) {
+    document.getElementById('content').innerHTML='<div class="alert alert-dismissible alert-info"><div class="loader"><\/div><strong><center>Пожалуйста подождите, идет сканирование сети.<\/center><\/strong><\/div>';
+    ajax(window.location.hostname,'devices.scan.json',submit, '1');
+    deviceList('search');
    }
 
    function deviceList(stage,sorting) {
@@ -58,40 +66,19 @@
      var allSpace = [];
      // for(var key in ipModule) {
      if (stage == 'search') {
-      loadBlock(ipval,'content','first',ipModule.module);
+      loadBlock(ipval,ipModule.space,'first',ipModule.module);
      }
      // Сортировка
      if (stage == 'first' && sorting == null || searchModule(ipModule.module,sorting) == 'yes' || ipModule.space == sorting) {
-      loadBlock(ipval,'content','first',ipModule.module);
+      loadBlock(ipval,ipModule.space,'first',ipModule.module);
 
      }
-     for (var s in ipModule.module) {
-      // if (ipModule.module[s] != 'ntp' && ipModule.module[s] != 'ddns' && ipModule.module[s] != 'timers' && ipModule.module[s] != 'mqtt')
-      allModules.push(ipModule.module[s]);
 
+     if(!document.getElementById(ipModule.space)){
+      document.getElementById("content").innerHTML += '<h2>'+ipModule.space+'<\/h2><hr><div class="row" id="'+ipModule.space+'"><\/div>';
      }
-     allSpace.push(ipModule.space);
+
      // }
-     if (stage == 'first' || stage == 'search') {
-      var spaceArray = [];
-      var space_lookup  = {};
-      for (var i in allSpace) {space_lookup[allSpace[i]] = allSpace[i];}
-      for (i in space_lookup) {spaceArray.push(space_lookup[i]);}
-      if (spaceArray.length == 1) {toggle('sorting-space','show');}
-      document.getElementById("sorting-space").innerHTML = '<h5 class="alert-default">{{LangSorting}}<\/h5><a href="#" class="btn btn-default" onclick="deviceList(\'first\');">all<\/a>';
-      for(var key in spaceArray) {
-       if (spaceArray[key]) document.getElementById("sorting-space").innerHTML += '<a href="#'+spaceArray[key]+'" class="btn btn-default" onclick="deviceList(\'first\',\''+spaceArray[key]+'\')">'+spaceArray[key]+'<\/a>';
-      }
-      var moduleArray = [];
-      var lookup  = {};
-      for (var i in allModules) {lookup[allModules[i]] = allModules[i];}
-      for (i in lookup) {moduleArray.push(lookup[i]);}
-      if (ipModule.length == 1) {toggle('sorting-module','show');}
-      document.getElementById("sorting-module").innerHTML = '<h5 class="alert-default">{{LangSorting}}<\/h5><a href="#" class="btn btn-sm btn-default" onclick="deviceList(\'first\');">all<\/a>';
-      for(var key in moduleArray) {
-       if (moduleArray[key]) document.getElementById("sorting-module").innerHTML += '<a href="#'+moduleArray[key]+'" class="btn btn-sm btn-default" onclick="deviceList(\'first\',\''+moduleArray[key]+'\')">'+moduleArray[key]+'<\/a>';
-      }
-     }
     }
    }
 
@@ -226,7 +213,7 @@
     var d = new Date(); // for now
     var datetext = d.getHours()+":"+d.getMinutes()+":"+d.getSeconds();
     var parent = submit.parentNode.childNodes[1].innerHTML;
-    document.getElementById('history').insertAdjacentHTML('afterbegin', '<li><span class="label label-default">&#8987; '+datetext+'<\/span><span class="history" style="cursor:pointer" onclick="toggle(\'hide-'+datetext+'\');return false"><b>'+parent+'<\/b><br><em>'+old_submit+'<\/em><small class="hidden" id="hide-'+datetext+'"><hr>URL: <a href="http://'+ipHost+'/'+pagename+'">http://'+ipHost+'/'+pagename+'<\/a><\/small><\/span><\/li>');
+    // document.getElementById('history').insertAdjacentHTML('afterbegin', '<li><span class="label label-default">&#8987; '+datetext+'<\/span><span class="history" style="cursor:pointer" onclick="toggle(\'hide-'+datetext+'\');return false"><b>'+parent+'<\/b><br><em>'+old_submit+'<\/em><small class="hidden" id="hide-'+datetext+'"><hr>URL: <a href="http://'+ipHost+'/'+pagename+'">http://'+ipHost+'/'+pagename+'<\/a><\/small><\/span><\/li>');
     submit.value = 'Loading...';
     submit_disabled(true);
     var xhttp=createXmlHttpObject();
@@ -239,6 +226,7 @@
      //if (!loadB) {
      // loadBlock(ipHost, pagename);
      //}
+
 
      var response=JSON.parse(xhttp.responseText);
      //if (response.class && response.class!='undefined') {submit.className = response.class.replace(/btn-block btn-lg/,'');}
@@ -326,6 +314,59 @@
      }
     }
    }
+
+   function loadIssues(){
+    var xmlHttp=createXmlHttpObject();
+    xmlHttp.open('GET','https://api.github.com/repos/tretyakovsa/Sonoff_WiFi_switch/issues',true);
+    xmlHttp.send(null);
+    xmlHttp.onload = function(e) {
+     document.getElementById('issues').innerHTML = '';
+     var jsonIssues=JSON.parse(xmlHttp.responseText);
+     jsonIssues.sort(function(a,b){return (a.updated_at< b.updated_at) ? 1 : ((b.updated_at < a.updated_at) ? -1 : 0);});
+     for(var key in jsonIssues) {
+      if (jsonIssues[key].user.login == 'renat2985' || jsonIssues[key].user.login == 'tretyakovsa') {
+       for(var label in jsonIssues[key].labels) {
+        if (jsonIssues[key].labels[label] == 'news') {
+         if (readCookie("news-"+jsonIssues[key].id) != "hidden") {
+          document.getElementById('news').innerHTML = '<div class="alert alert-dismissible alert-info"><button class="close" onclick="hide(\'news-'+jsonIssues[key].id+'\',this);" type="button">×<\/button>'+jsonIssues[key].title.substr(0, 100)+' <a href="'+jsonIssues[key].html_url+'" target="_blank">подробнее...<\/a><\/div>';
+         }
+        }
+       }
+      }
+      if (key < 10) {
+       document.getElementById('issues').innerHTML += '<p><span class="label label-default">&#8987; '+jsonIssues[key].updated_at.substring(0,10)+'<\/span> <a href="'+jsonIssues[key].html_url+'" target="_blank">'+jsonIssues[key].title+'<\/a> <i>('+jsonIssues[key].comments+')<\/i><\/p>';
+      }
+     }
+    }
+   }
+
+
+   function loadCommits(){
+    var xmlHttp=createXmlHttpObject();
+    xmlHttp.open('GET','https://api.github.com/repos/tretyakovsa/Sonoff_WiFi_switch/commits',true);
+    xmlHttp.send(null);
+    xmlHttp.onload = function(e) {
+     document.getElementById('commits').innerHTML = '';
+     var jsonCommits=JSON.parse(xmlHttp.responseText);
+     //  jsonCommits.sort(function(a,b){return (a.updated_at< b.updated_at) ? 1 : ((b.updated_at < a.updated_at) ? -1 : 0);});
+     for(var key in jsonCommits) {
+      if (key < 10) {
+       document.getElementById('commits').innerHTML += '<p><span class="label label-default">&#8987; '+jsonCommits[key].commit.author.date.substring(0,10)+'<\/span> <a href="'+jsonCommits[key].html_url+'" target="_blank">'+jsonCommits[key].commit.message+'<\/a><\/p>';
+      }
+     }
+    }
+   }
+
+   function readCookie(name) {
+    var nameEQ = name + "=";
+    var ca = document.cookie.split(';');
+    for (var i = 0; i < ca.length; i++) {
+     var c = ca[i];
+     while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+     if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+    }
+    return null;
+   }
   </script>
  </head>
  <body>
@@ -347,22 +388,21 @@
     </div>
     <h1>{{space}}<br><small class="show">{{SSDP}}<sup id="update"></sup></small></h1>
    </div>
+   <div class="col-sm-12 col-md-9" id="content"></div>
    <div class="col-sm-12 col-md-3">
-    <h5 style="background-color:#C0C7CA;cursor:pointer" class="hidden-xs" onclick="toggle('history');return false">{{LangHistory}}</h5>
-    <ul id="history" class="hidden-xs"></ul>
-    <hr>
-    <div class="block" id="sorting-space"></div>
-    <div class="block" id="sorting-module"></div>
-    <div class="col-xs-6 col-md-12">
+    <div class="col-md-12">
      <div class="block">
-      <h5 class="alert-warning">{{LangScenery1}}</h5>
-      <div class="alert alert-dismissible alert-info {{g94244}}"><button class="close" onclick="hide('g94244',this);" type="button">×</button>{{LangScenery2}}</div>
-      <a class="btn btn-block btn-default" href="/scenery.htm">{{LangAddScenery}}</a>
+      <h5 class="alert-default">Issues</h5>
+      <div id="issues">{{LangLoading}}</div>
+     </div>
+     <hr>
+     <div class="block">
+      <h5 class="alert-default">Commits</h5>
+      <div id="commits">{{LangLoading}}</div>
      </div>
     </div>
     <div class="row"></div>
    </div>
-   <div class="col-sm-12 col-md-9" id="content"></div>
   </div>
  </body>
 </html>
