--- a/dev_data/index3.htm
+++ b/dev_data/index3.htm
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" type="text/css" href="css/build.css?v15.07.2017">
+  <link rel="stylesheet" type="text/css" href="css/build.css?v11.09.2017">
   <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/style.css"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -150,20 +150,26 @@
 
        if (searchModule(modules,"jalousie") == 'yes'){
         if (stage == 'first'){loadElement(jsonResponse.ip,jsonResponse.SSDP,jsonResponse.space,'jalousie','success',content);}
-        document.getElementById("button-"+ipval+"-jalousie").innerHTML='<input onclick="ajax(\''+jsonResponse.ip+'\',\'jalousie\',this);" value="'+(jsonResponse.state=='0'?jsonResponse.LangOn:jsonResponse.LangOff)+'" class="btn btn-'+(jsonResponse.state=='0'?'primary':'info')+'" type="button">';
+        document.getElementById("button-"+ipval+"-jalousie").innerHTML='<input onclick="ajax(\''+jsonResponse.ip+'\',\'cmd?command=jalousienot\',this);" value="'+(jsonResponse.stateJalousie=='0'?jsonResponse.LangOpen:jsonResponse.LangClose)+'" class="btn btn-'+(jsonResponse.stateJalousie=='0'?'primary':'info')+'" type="button">';
        }
 
-
+       if (searchModule(modules,"leakag") == 'yes'){
+        if (stage == 'first'){loadElement(jsonResponse.ip,jsonResponse.SSDP,jsonResponse.space,'leakag','success',content);}
+        document.getElementById("button-"+ipval+"-leakag").innerHTML='<input onclick="ajax(\''+jsonResponse.ip+'\',\'cmd?command=leakagnot\',this);" value="'+(jsonResponse.stateLeakag=='0'?jsonResponse.LangOn:jsonResponse.LangOff)+'" class="btn btn-'+(jsonResponse.stateLeakag=='0'?'primary':'info')+'" type="button">';
+       }
 
        if (stage == 'first'){
         if (searchModule(modules,"timers") == 'yes'){
          loadTimers(ipval,content,jsonResponse);
         }
         if (searchModule(modules,"temperature") == 'yes'){
-         loadSensors(ipval,'table-sensors',jsonResponse);
+         loadSensor(ipval,'table-sensors',jsonResponse,"temperature");
+        }
+        if (searchModule(modules,"humidity") == 'yes'){
+         loadSensor(ipval,'table-sensors',jsonResponse,"humidity");
         }
         if (searchModule(modules,"analog") == 'yes'){
-         loadAnalog(ipval,'table-sensors',jsonResponse);
+         loadSensor(ipval,'table-sensors',jsonResponse,"analog");
         }
        }
 
@@ -217,32 +223,23 @@
      for (var i = 0; i < timers.timer.length; i++) {
       if (timers.timer[i].trigger == "on") {timers.timer[i].trigger = '<span class="label label-success">'+jsonResponse["LangOn."]+'<\/span>';}
       if (timers.timer[i].trigger == "off") {timers.timer[i].trigger = '<span class="label label-danger">'+jsonResponse["LangOff."]+'<\/span>';}
+      if (timers.timer[i].trigger == "open") {timers.timer[i].trigger = '<span class="label label-success">'+jsonResponse["LangOpen"]+'<\/span>';}
+      if (timers.timer[i].trigger == "close") {timers.timer[i].trigger = '<span class="label label-danger">'+jsonResponse["LangClose"]+'<\/span>';}
       if (timers.timer[i].trigger == "not") {timers.timer[i].trigger = '<span class="label label-info">'+jsonResponse["LangSwitch."]+'<\/span>';}
       timers.timer[i].day = jsonResponse["Lang"+timers.timer[i].day];
-      timerList += '<a class="label label-default" href="http://'+jsonResponse.ip+'/timer.htm">'+jsonResponse.LangTimer+'<\/a> '+timers.timer[i].trigger+' '+timers.timer[i].day.substring(0,7)+'. '+timers.timer[i].time+'<br>';
+      timerList += '<a class="label label-default" href="http://'+jsonResponse.ip+'/page.htm?timer">'+jsonResponse.LangTimer+'<\/a> '+timers.timer[i].trigger+' '+timers.timer[i].day.substring(0,7)+'. '+timers.timer[i].time+(timers.timer[i].work?' - '+timers.timer[i].work:'')+'<br>';
      }
      document.getElementById("timers-"+ipval).innerHTML+=''+(timerList?timerList:'')+'';
     }
    }
 
-
-   function loadSensors(ipval, content, jsonResponse) {
+   function loadSensor(ipval, content, jsonResponse, module) {
     var xmlHttp=createXmlHttpObject();
-    xmlHttp.open("GET", "http://"+ipval+"/sensor.json", true);
+    xmlHttp.open("GET", "http://"+ipval+"/"+module+".json", true);
     xmlHttp.send(null);
     xmlHttp.onload = function(e) {
      var sensors=JSON.parse(xmlHttp.responseText);
-     document.getElementById("timers-"+ipval).innerHTML+='<a class="label label-default" href="http://'+jsonResponse.ip+'/page.htm?chart&sensor">'+jsonResponse.LangTemperature+'<\/a> <b>'+sensors.data+(sensors.data2?', '+sensors.data2:'')+(sensors.data3?', '+sensors.data3:'')+'<\/b><br>';
-    }
-   }
-
-   function loadAnalog(ipval, content, jsonResponse) {
-    var xmlHttp=createXmlHttpObject();
-    xmlHttp.open("GET", "http://"+ipval+"/analog.json", true);
-    xmlHttp.send(null);
-    xmlHttp.onload = function(e) {
-     var sensors=JSON.parse(xmlHttp.responseText);
-     document.getElementById("timers-"+ipval).innerHTML+='<a class="label label-default" href="http://'+jsonResponse.ip+'/page.htm?chart&analog">'+jsonResponse.LangAnalog+'<\/a> <b>'+sensors.data+'<\/b><br>';
+     document.getElementById("timers-"+ipval).innerHTML+='<a class="label label-default" href="http://'+jsonResponse.ip+'/page.htm?chart&'+module+'">'+jsonResponse['Lang'+module.charAt(0).toUpperCase()+module.substr(1)]+'<\/a> <b>'+sensors.data+(sensors.data2?', '+sensors.data2:'')+(sensors.data3?', '+sensors.data3:'')+'<\/b><br>';
     }
    }
 
@@ -403,7 +400,7 @@
     <div class="btn-group pull-right" style="margin-top:35px;">
      <a href="#" class="btn btn-default" onclick="deviceList('first');"><i class="refresh-img"></i></a>
      <a href="#" class="btn btn-default dropdown-toggle" onclick="toggle('help');"><i class="help-img"></i> <span class="hidden-xs">{{LangHelp}}</span> <span class="caret"></span></a>
-     <ul class="dropdown-menu hidden" id="help"><li><a href="https://github.com/tretyakovsa/Sonoff_WiFi_switch/issues" target="_blank"><b>Sonoff</b> (Relay)</a></li><li><a href="https://github.com/renat2985/rgb/issues" target="_blank"><b>RGB</b> (WS2811-12/NeoPixel)</a></li><li><a href="https://github.com/tretyakovsa/jaluzi/issues" target="_blank"><b>Jalousie</b> (Motor/Servo)</a></li></ul>
+     <ul class="dropdown-menu hidden" id="help"><li><a href="https://github.com/tretyakovsa/Sonoff_WiFi_switch/issues" target="_blank"><b>Sonoff</b> (Relay)</a></li><li><a href="https://github.com/renat2985/rgb/issues" target="_blank"><b>RGB</b> (WS2811-12/NeoPixel)</a></li><li><a href="https://github.com/tretyakovsa/jaluzi/issues" target="_blank"><b>Jalousie</b> (Motor)</a></li></ul>
     </div>
     <div class="pull-right" style="margin-top:35px;margin-right:5px">
      <div class="btn-group">
