--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div class="page">
     <div class="container">
       <div class="left">
+        <div class="eula" style="margin-bottom: 0;">RGB Smart Home </div>
         <img src="https://raw.githubusercontent.com/renat2985/rgb/master/tutorial/screen1.png" style="width:100%;">
       </div>
       <div class="right">
